--- a/comics/145/index.html
+++ b/comics/145/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #144: Sleep like a baby</title>
+    <title>comiCSS #145: Haircut</title>
 
-    <meta property="og:title" content="comiCSS #144: Sleep like a baby" />
+    <meta property="og:title" content="comiCSS #145: Haircut" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/144" />
-    <meta property="og:image" content="https://comicss.art/comics/144/thumb.png" />
-    <meta property="og:description" content="Comic with four panels in a 2x2 grid. It has two characters talking. The first one asks 'Hey! I haven't seen you in a while. How's the new project? Lots of hours? Do you even sleep?" The second replies "Oh, I sleep like a baby" The first one asks 'deeply and well?' And the second one replies sadly 'No. I wake up every 3 hours crying and calling for my mom'" />
+    <meta property="og:url" content="https://comicss.art/comics/145" />
+    <meta property="og:image" content="https://comicss.art/comics/145/thumb.png" />
+    <meta property="og:description" content="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/144">
-    <meta name="twitter:title" content="comiCSS #144: Sleep like a baby">
-    <meta name="twitter:description" content="Comic with four panels in a 2x2 grid. It has two characters talking. The first one asks 'Hey! I haven't seen you in a while. How's the new project? Lots of hours? Do you even sleep?" The second replies "Oh, I sleep like a baby" The first one asks 'deeply and well?' And the second one replies sadly 'No. I wake up every 3 hours crying and calling for my mom'">
-    <meta name="twitter:image" content="https://comicss.art/comics/144/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/145">
+    <meta name="twitter:title" content="comiCSS #145: Haircut">
+    <meta name="twitter:description" content="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'">
+    <meta name="twitter:image" content="https://comicss.art/comics/145/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/144" />
+    <link rel="canonical" href="https://comicss.art/comics/145" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Sleep like a baby</h1>
+      <h1>Haircut</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/143" rel="prev">
+        <a href="/comics/144" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/145" rel="next">
+        <a href="/comics/146" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="Comic with four panels in a 2x2 grid. It has two characters talking. The first one asks 'Hey! I haven't seen you in a while. How's the new project? Lots of hours? Do you even sleep?' The second replies 'Oh, I sleep like a baby' The first one asks 'deeply and well?' And the second one replies sadly 'No. I wake up every 3 hours crying and calling for my mom'">
-        <img src="/comics/144/144-sleep-like-a-baby-0.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-1.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-2.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" aria-label="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'">
+        <img src="/comics/145/145-haircut-0.webp" alt="" width="350" />
+        <img src="/comics/145/145-haircut-1.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,7 +151,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/143" rel="prev">
+        <a href="/comics/144" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -167,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/145" rel="next">
+        <a href="/comics/146" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/144">https://comicss.art/comics/144</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/144/sleep-like-a-baby.png">https://comicss.art/comics/144/sleep-like-a-baby.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/144/sleep-like-a-baby.html" rel="alternate">https://comicss.art/comics/144/sleep-like-a-baby.html</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/145">https://comicss.art/comics/145</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/145/haircut.png">https://comicss.art/comics/145/haircut.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/145/haircut.html" rel="alternate">https://comicss.art/comics/145/haircut.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +219,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 144;</script>
+    <script>let postId = 145;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
