--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Sleep like a baby</h1>
+      <h1>Haircut</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,7 +111,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/143" rel="prev">
+        <a href="/comics/144" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -139,11 +139,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic with four panels in a 2x2 grid. It has two characters talking. The first one asks 'Hey! I haven't seen you in a while. How's the new project? Lots of hours? Do you even sleep?' The second replies 'Oh, I sleep like a baby' The first one asks 'deeply and well?' And the second one replies sadly 'No. I wake up every 3 hours crying and calling for my mom'">
-        <img src="/comics/144/144-sleep-like-a-baby-0.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-1.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-2.webp" alt="" width="350" />
-        <img src="/comics/144/144-sleep-like-a-baby-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon with two panels showing two people talking. One has long spiky hair, the other one has a more classic hair and says 'cool haircut! did you go to the hairdresser?'. The person with spiky hair replies: 'No, I was just reviewing the new Junior's PR'">
+        <img src="/comics/145/145-haircut-0.webp" alt="" width="350" />
+        <img src="/comics/145/145-haircut-1.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,7 +151,7 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/143" rel="prev">
+        <a href="/comics/144" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
@@ -181,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/144">https://comicss.art/comics/144</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/144/sleep-like-a-baby.png">https://comicss.art/comics/144/sleep-like-a-baby.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/144/sleep-like-a-baby.html" rel="alternate">https://comicss.art/comics/144/sleep-like-a-baby.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/145">https://comicss.art/comics/145</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/145/haircut.png">https://comicss.art/comics/145/haircut.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/145/haircut.html" rel="alternate">https://comicss.art/comics/145/haircut.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -222,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-06-18"></script>
+    <script src="/js/data.js?last-updated=2024-08-04"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
