--- a/comics/146/index.html
+++ b/comics/146/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #146: Order</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #146: Order" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/146" />
+    <meta property="og:image" content="https://comicss.art/comics/146/thumb.png" />
+    <meta property="og:description" content="cartoon with 4 panels showing a disorganized book shelf. Then two characters talking: 'your shelf is always messy!', then the other one replies '.shelf .book order:unset' all the books in the shelf become ordered. The first character replies 'I get why that worked, but it makes no sense'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/146">
+    <meta name="twitter:title" content="comiCSS #146: Order">
+    <meta name="twitter:description" content="cartoon with 4 panels showing a disorganized book shelf. Then two characters talking: 'your shelf is always messy!', then the other one replies '.shelf .book order:unset' all the books in the shelf become ordered. The first character replies 'I get why that worked, but it makes no sense'">
+    <meta name="twitter:image" content="https://comicss.art/comics/146/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel="canonical" href="https://comicss.art/comics/146" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/147" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="cartoon with 4 panels showing a disorganized book shelf. Then two characters talking: 'your shelf is always messy!', then the other one replies '.shelf .book order:unset' all the books in the shelf become ordered. The first character replies 'I get why that worked, but it makes no sense'">
+      <div id="comic-strip" role="img" class="" aria-label="cartoon with 4 panels showing a disorganized book shelf. Then two characters talking: 'your shelf is always messy!', then the other one replies '.shelf .book order:unset' all the books in the shelf become ordered. The first character replies 'I get why that worked, but it makes no sense'">
         <img src="/comics/146/146-order-0.webp" alt="" width="350" /><img src="/comics/146/146-order-1.webp" alt="" width="350" /><img src="/comics/146/146-order-2.webp" alt="" width="350" /><img src="/comics/146/146-order-3.webp" alt="" width="350" />
       </div>
 
@@ -164,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/147" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -178,8 +178,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/146">https://comicss.art/comics/146</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/146/order.png">https://comicss.art/comics/146/order.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/146">https://comicss.art/comics/146</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/146/order.png">https://comicss.art/comics/146/order.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/146/order.html" rel="alternate">https://comicss.art/comics/146/order.html</a></p>
 
       <hr />
@@ -218,8 +218,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-08-11"></script>
+    <script>let postId = 146;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
