--- a/comics/147/index.html
+++ b/comics/147/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #147: Floating on Air</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #147: Floating on Air" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/147" />
+    <meta property="og:image" content="https://comicss.art/comics/147/thumb.png" />
+    <meta property="og:description" content="Cartoon with 3 panels, the first show two show a person smiling and with hearts for eyes saying 'she makes me so happy, I could float on air'. In the last panel, two people tagged as Flex and Grid say simultaneously: 'Don't even think about it!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/147">
+    <meta name="twitter:title" content="comiCSS #147: Floating on Air">
+    <meta name="twitter:description" content="Cartoon with 3 panels, the first show two show a person smiling and with hearts for eyes saying 'she makes me so happy, I could float on air'. In the last panel, two people tagged as Flex and Grid say simultaneously: 'Don't even think about it!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/147/thumb.png">
     <meta name="monetization" content="$ilp.uphold.com/raZZQiMDDWLe" />
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel=canonical href=https://comicss.art />
+    <link rel="canonical" href="https://comicss.art/comics/147" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/148" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="Cartoon with 3 panels, the first show two show a person smiling and with hearts for eyes saying 'she makes me so happy, I could float on air'. In the last panel, two people tagged as Flex and Grid say simultaneously: 'Don't even think about it!'">
+      <div id="comic-strip" role="img" class="vertical" aria-label="Cartoon with 3 panels, the first show two show a person smiling and with hearts for eyes saying 'she makes me so happy, I could float on air'. In the last panel, two people tagged as Flex and Grid say simultaneously: 'Don't even think about it!'">
         <img src="/comics/147/147-floating-on-air-0.webp" alt="" width="350" />
         <img src="/comics/147/147-floating-on-air-1.webp" alt="" width="350" />
       </div>
@@ -165,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/148" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -179,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/147">https://comicss.art/comics/147</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/147/floating-on-air.png">https://comicss.art/comics/147/floating-on-air.png</a></p>
+      <p>Permalink: <a aria-label="permanet link" id="permanent-link" href="/comics/147">https://comicss.art/comics/147</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/147/floating-on-air.png">https://comicss.art/comics/147/floating-on-air.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/147/floating-on-air.html" rel="alternate">https://comicss.art/comics/147/floating-on-air.html</a></p>
 
       <hr />
@@ -219,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2024-08-24"></script>
+    <script>let postId = 147;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
